--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev": "nodemon src/index.ts"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.4.1"
   }
 }
