--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "packageManager": "yarn@3.6.1",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "eslint": "latest",
@@ -16,6 +17,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
